<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/for_toolbar">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/back"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_back2_foreground"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:text="@string/adding_event"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_delete_event"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/delete"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_delete_foreground"
            tools:ignore="UnusedAttribute" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_event"
                android:paddingHorizontal="4dp" />

            <EditText
                android:id="@+id/et_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="event"
                android:backgroundTint="@color/for_icon"
                android:hint="@string/_name_event"
                android:inputType="text" />

            <TextView
                android:id="@+id/tv_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:paddingHorizontal="4dp"
                android:paddingTop="12dp" />

            <EditText
                android:id="@+id/et_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="date"
                android:backgroundTint="@color/for_icon"
                android:focusable="false"
                android:hint="@string/_date"
                android:inputType="date" />

            <TextView
                android:id="@+id/tv_event_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time"
                android:paddingHorizontal="4dp"
                android:paddingTop="12dp" />

            <EditText
                android:id="@+id/et_event_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="date"
                android:backgroundTint="@color/for_icon"
                android:focusable="false"
                android:hint="@string/_time"
                android:inputType="time" />

            <TextView
                android:id="@+id/tv_event_organizer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/manager"
                android:paddingHorizontal="4dp"
                android:paddingTop="12dp" />

            <EditText
                android:id="@+id/et_event_organizer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="manager"
                android:backgroundTint="@color/for_icon"
                android:focusable="false"
                android:hint="@string/_name_school"
                android:inputType="none" />

            <TextView
                android:id="@+id/tv_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:paddingHorizontal="4dp"
                android:paddingTop="12dp" />

            <EditText
                android:id="@+id/et_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="description"
                android:backgroundTint="@color/for_icon"
                android:hint="@string/funny"
                android:inputType="text" />

            <TextView
                android:id="@+id/tv_event_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cost"
                android:paddingHorizontal="4dp"
                android:paddingTop="12dp" />

            <EditText
                android:id="@+id/et_event_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="cost"
                android:backgroundTint="@color/for_icon"
                android:hint="@string/_0_0"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/tv_event_start_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/start"
                android:paddingHorizontal="4dp"
                android:paddingTop="12dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_event_start_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="start"
                android:backgroundTint="@color/for_icon"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/_start"
                android:inputType="text"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_event_end_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/finish"
                android:paddingHorizontal="4dp"
                android:paddingTop="12dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_event_end_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="end"
                android:backgroundTint="@color/for_icon"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/_end"
                android:inputType="text"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_event_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/speed"
                android:paddingHorizontal="4dp"
                android:paddingTop="12dp" />

            <EditText
                android:id="@+id/et_event_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="speed"
                android:backgroundTint="@color/for_icon"
                android:hint="@string/_speed"
                android:inputType="number" />

            <TextView
                android:id="@+id/tv_event_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/distance"
                android:paddingHorizontal="4dp"
                android:paddingTop="12dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_event_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="distance"
                android:backgroundTint="@color/for_icon"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/_distance"
                android:inputType="text"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_event_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_photo_"
                android:paddingHorizontal="4dp"
                android:paddingVertical="12dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_event_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_marginVertical="5dp"
                    android:contentDescription="@string/event_photo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rollers" />

                <ImageView
                    android:id="@+id/iv_change_photo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start"
                    android:contentDescription="@string/change_photo"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_photo_foreground"
                    tools:ignore="UnusedAttribute" />
            </FrameLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_route"
                style="@style/ButtonNoAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_route" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_route"
                style="@style/ButtonAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/save_event"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>