<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/for_toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" >
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewPhotoToolbar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cardElevation="0dp"
            android:background="@color/transparent"
            app:cardCornerRadius="20dp">
            <ImageView
                android:id="@+id/ivPhotoToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo"
                android:contentDescription="@string/user_photo" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/txvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/for_icon"
            android:textSize="20sp"
            android:paddingHorizontal="10dp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/imageViewExit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center|end"
            android:src="@drawable/ic_exit_foreground"
            android:foreground="?android:attr/selectableItemBackground"
            android:contentDescription="@string/exit"
            tools:ignore="UnusedAttribute" />
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewPhoto"
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardElevation="0dp"
                android:background="@color/transparent"
                app:cardCornerRadius="8dp">
                <ImageView
                    android:id="@+id/ivPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/avatar"
                    android:background="@color/transparent"
                    android:contentDescription="@string/user_photo" />
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:id="@+id/llSchool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txvSchoolName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_school"
                    android:paddingHorizontal="4dp"
                    android:paddingTop="10dp" />
                <EditText
                    android:id="@+id/etSchoolName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/_name_school"
                    android:backgroundTint="@color/for_icon"
                    android:autofillHints="name school"
                    android:inputType="textMultiLine" />
                <TextView
                    android:id="@+id/txvSchoolDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:paddingHorizontal="4dp"
                    android:paddingTop="10dp" />
                <EditText
                    android:id="@+id/etSchoolDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/_description"
                    android:backgroundTint="@color/for_icon"
                    android:autofillHints="school description"
                    android:inputType="textMultiLine" />
                <TextView
                    android:id="@+id/txvSchoolAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:paddingHorizontal="4dp"
                    android:paddingTop="10dp" />
                <EditText
                    android:id="@+id/etSchoolAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/_address"
                    android:backgroundTint="@color/for_icon"
                    android:autofillHints="school address"
                    android:inputType="textMultiLine" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txvFirstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:paddingHorizontal="4dp"
                    android:paddingTop="10dp" />
                <EditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/_name"
                    android:backgroundTint="@color/for_icon"
                    android:autofillHints="first name"
                    android:inputType="textPersonName" />
                <TextView
                    android:id="@+id/txvLastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:paddingHorizontal="4dp"
                    android:paddingTop="10dp" />
                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/_last_name"
                    android:backgroundTint="@color/for_icon"
                    android:autofillHints="last name"
                    android:inputType="textPersonName" />
                <TextView
                    android:id="@+id/txvStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/status"
                    android:paddingHorizontal="4dp"
                    android:paddingTop="10dp" />
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/SwitchStatus"
                    android:hint="@string/inactive"
                    android:paddingHorizontal="4dp" />
                <TextView
                    android:id="@+id/txvDistrict"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/district"
                    android:paddingHorizontal="4dp"
                    android:paddingTop="10dp" />
                <EditText
                    android:id="@+id/etDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/_district"
                    android:backgroundTint="@color/for_icon"
                    android:autofillHints="district"
                    android:focusable="false"
                    android:inputType="textMultiLine" />
                <TextView
                    android:id="@+id/txvBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthday"
                    android:paddingHorizontal="4dp"
                    android:paddingTop="10dp" />
                <EditText
                    android:id="@+id/etBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/_birthday"
                    android:inputType="date"
                    android:focusable="false"
                    android:backgroundTint="@color/for_icon"
                    android:autofillHints="birthday" />
                <TextView
                    android:id="@+id/txvGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender"
                    android:paddingHorizontal="4dp"
                    android:paddingTop="10dp" />
                <EditText
                    android:id="@+id/etGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender_female"
                    android:focusable="false"
                    android:backgroundTint="@color/for_icon"
                    android:autofillHints="birthday"
                    android:inputType="text" />
            </LinearLayout>
            <TextView
                android:id="@+id/txvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:paddingHorizontal="4dp"
                android:paddingTop="10dp" />
            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_phone"
                android:inputType="phone"
                android:backgroundTint="@color/for_icon"
                android:autofillHints="phone" />
            <TextView
                android:id="@+id/txvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:paddingHorizontal="4dp"
                android:paddingTop="10dp" />
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_mail_ru"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/for_icon"
                android:autofillHints="emailAddress" />
            <TextView
                android:id="@+id/txvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:paddingHorizontal="4dp"
                android:paddingTop="10dp" />
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_pass"
                android:inputType="textPassword"
                android:backgroundTint="@color/for_icon"
                android:autofillHints="password" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveChanges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saveChanges"
                android:layout_marginTop="12dp"
                style="@style/ButtonAccent" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
